--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^7.1.2",
     "axios": "^1.10.0",
     "react": "^18.0.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.0.0",
     "react-quill": "^2.0.0",
     "react-router-dom": "^7.6.3",
